Move the JS code to switch the CSS in <head> to prevent flickering on change.

--- a/css/dark.css
+++ b/css/dark.css
@@ -751,6 +751,7 @@ input.apply {
 #login input.textfield {
     width: 80px;
     text-align: center;
+    color: white;
 }
 
 #login .button {
